--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ black = "^25.1.0"
 pydantic = "^2.11.7"
 fastapi = "^0.116.1"
 
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^3.6.0"
+
 
 [build-system]
 requires = ["poetry-core"]
