--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,10 +14,13 @@ mlflow = "^3.2.0"
 black = "^25.1.0"
 pydantic = "^2.11.7"
 fastapi = "^0.116.1"
+httpx = "^0.27.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.6.0"
 ruff = "^0.3.0"
+pytest = "^8.4.1"
+pytest-cov = "^5.0.0"
 
 
 [tool.ruff]
@@ -41,6 +44,18 @@ ignore = [
 
 [tool.ruff.lint.isort]
 known-first-party = ["sentiment_service"]
+
+[tool.pytest.ini_options]
+testpaths = ["src/tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+addopts = [
+    "--cov=sentiment_service",
+    "--cov-report=term-missing",
+    "--cov-report=html",
+    "--cov-fail-under=80"
+]
 
 [build-system]
 requires = ["poetry-core"]
